--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
+	        		<li><a href="/IfdefRevolver/">Home</a></li>
 		        	<!--li><a href="/about">About</a></li-->
 	    		</ul>
 			</nav>
